--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
   box-sizing: border-box;
   margin-top: 0;
   margin-left: 0;
+  margin-bottom: 0;
   text-align: center;
 }
 header {
@@ -12,17 +13,15 @@ header {
   padding-top: 2rem;
 }
 .top-nav {
-  text-align: center;
   text-transform: uppercase;
+  max-width: 100%;
   margin: 0 auto;
 }
 li {
+  border: 10px solid rgb(241, 241, 241);
   list-style: none;
-  margin-top: -5px;
-  height: 1.5rem;
+  height: 3rem;
   background-color: white;
-  text-align: center;
-  text-decoration: none;
 }
 a {
   text-decoration: none;
@@ -30,6 +29,12 @@ a {
 }
 .profile-img {
   padding-top: 20px;
+}
+.aboutme {
+  background-color: rgb(241, 241, 241);
+}
+#background {
+  background-color: rgb(241, 241, 241);
 }
 
 .aboutme-text {
@@ -53,12 +58,15 @@ p {
 
 .portfolio-img {
   max-width: 90%;
-  padding-top: 40px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 .portfolio-text {
   text-align: center;
   padding-left: 20%;
   padding-right: 20%;
+  padding-top: 1.2rem;
+  font-size: 1.3rem;
 }
 
 footer {
@@ -106,7 +114,6 @@ strong {
     font-weight: bold;
     padding: 20px;
     background-color: rgb(241, 241, 241);
-    text-size-adjust: 2rem;
   }
 
   .aboutme {
@@ -158,10 +165,13 @@ strong {
     display: inline-flex;
     flex-direction: row;
     float: right;
-    margin: 20px;
+
     text-transform: uppercase;
     background-color: rgb(241, 241, 241);
+    color: black;
+    font-weight: bold;
   }
+
   .contact-text {
     width: 80%;
     margin: 0 auto;
@@ -230,6 +240,5 @@ strong {
     display: inline-flex;
     font-weight: bold;
     color: black;
-    margin-top: 0;
   }
 }
